; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_rename.c_test_config_rename__can_rename.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_rename.c_test_config_rename__can_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@g_config = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"branch.track-local.remote\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"branch.local-track.remote\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [19 x i8] c"branch.track-local\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"branch.local-track\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_rename__can_rename() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i32, i32* @g_config, align 4
  %3 = call i32 @git_config_get_entry(%struct.TYPE_4__** %1, i32 %2, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = call i32 @git_config_entry_free(%struct.TYPE_4__* %9)
  %11 = load i32, i32* @g_config, align 4
  %12 = call i32 @git_config_get_entry(%struct.TYPE_4__** %1, i32 %11, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @cl_git_fail(i32 %12)
  %14 = load i32, i32* @g_repo, align 4
  %15 = call i32 @git_config_rename_section(i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @g_config, align 4
  %18 = call i32 @git_config_get_entry(%struct.TYPE_4__** %1, i32 %17, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %25 = call i32 @git_config_entry_free(%struct.TYPE_4__* %24)
  %26 = load i32, i32* @g_config, align 4
  %27 = call i32 @git_config_get_entry(%struct.TYPE_4__** %1, i32 %26, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %28 = call i32 @cl_git_fail(i32 %27)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_get_entry(%struct.TYPE_4__**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_config_entry_free(%struct.TYPE_4__*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_config_rename_section(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
